--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Projeto Login</title>
 </head>
 <body>
     <header>
@@ -23,9 +23,10 @@
 
     <div class="container mt-5">
         <h1 style="margin-left: 10px;">Login</h1>
-        <form class="container mt-5">
+        <form class="container mt-5" action="{% url 'login' %}" method="POST">
+            {% csrf_token %}
             <div class="form-group">
-            <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" name="nome">
+            <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" name="email">
             </div>
             <div class="form-group">
             <input type="password" class="form-control" placeholder="Senha" name="senha">
